--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,12 +16,14 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: aqua;
   text-decoration: inherit;
+  text-shadow: 2px 2px 2px rgba(22,26,29,0.6);
 }
-a:hover {
-  color: #535bf2;
-}
+
+/* a:hover {
+  background-color: #BA181B;
+} */
 
 body {
   margin: 0;
@@ -39,7 +41,7 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.4em 1em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -47,9 +49,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
-  border-color: #646cff;
+  border-color: #BA181B;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
