--- a/client/src/components/landing/Landing.module.css
+++ b/client/src/components/landing/Landing.module.css
@@ -1,6 +1,6 @@
 .divLanding {
 background-size: cover;
-background-image: url("../../assets/F1.png");
+background-image: url("../../assets/F1_2.png");
 position: absolute;
 left: 0;
 right: 0;
@@ -15,16 +15,19 @@ bottom: 0;
   left: 10%;
   font-size: 4em;
   font-weight: 500;
-  color: #BA181B;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: rgb(30, 30, 30);
   background-color: transparent;
-  border: 1px solid aqua;
+  border: 1px solid rgb(11, 11, 11);
   border-radius: 40px;
   padding: 0 16px;
   cursor: pointer;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.5s linear;
 }
 
 .landingButton:hover {
   transform: scale(1.2);
+  text-shadow: 10px 10px 15px rgb(30, 30, 30);
+  border-color: aqua;
   color: aqua;
 }
