--- a/client/src/components/pagination/Pagination.module.css
+++ b/client/src/components/pagination/Pagination.module.css
@@ -1,15 +1,70 @@
 .list {
-    margin: 0 auto 2em auto;
-    padding: 0;
+width: 45%;
+    margin: 0 auto;
+    padding: 0.2em;
     list-style: none;
+    background-color: transparent;
+    display: flex;
+    border: 1px solid aqua;
+    justify-content: center;
+    align-items: center;
+    border-radius: 23px;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 }
 
 .itemNumber {
+    width: 20px;
+    height: 25px;
+    color: rgb(255, 30, 0);
     cursor: pointer;
     margin: 0.2em;
-    display: inline;
+    font-size: 1.1em;
+    transition: 0.2s linear;
 }
 
 .itemNumber:hover {
-  background-color: darkred;
+  font-weight: 50px;
+  color: aqua;
+  transform: scale(1.3);
+}
+
+.active {
+  transform: scale(1.3);
+  vertical-align:middle;
+  border: 1px solid aqua;
+  border-radius: 5px;
+  width: 22px;
+  height: 23px;
+  color: aqua;
+  margin: 0.2em;
+  font-size: 1.1em;
+  box-shadow: 1px 1px 2px rgba(0,0,0,0.75);
+}
+
+.prevButton, .nextButton {
+  width: 60px;
+  height: 25px;
+  margin: 0 10px;
+  font-size: 0.8em;
+  font-weight: 300;
+  color: aqua;
+  background-color: transparent;
+  border: 1px solid aqua;
+  border-radius: 40px;
+  padding: 0 16px;
+  cursor: pointer;
+  transition: 0.5s linear;
+}
+
+.prevButton:hover, .nextButton:hover {
+  transform: scale(1.2);
+  border-color: rgb(255, 30, 0);
+}
+
+.dots {
+  margin: 0 5px;
+  color: rgb(255, 30, 0);
+  font-size: 1.1em;
 }
