--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,14 +16,9 @@
 
 a {
   font-weight: 500;
-  color: aqua;
-  text-decoration: inherit;
+  text-decoration: none;
   text-shadow: 2px 2px 2px rgba(22,26,29,0.6);
 }
-
-/* a:hover {
-  background-color: #BA181B;
-} */
 
 body {
   margin: 0;
@@ -38,36 +33,6 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.4em 1em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: #BA181B;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+p {
+  margin: 0;
 }
