--- a/client/src/components/home/Home.module.css
+++ b/client/src/components/home/Home.module.css
@@ -1,10 +1,20 @@
 .divLoader {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-image: url('../../assets/LoaderRedBull.gif');
-    background-size: cover;
-    background-position:bottom;
-  }
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: url('../../assets/LoaderFerrari.gif');
+  background-size: cover;
+  background-position:bottom;
+}
+
+.loadDrivers {
+  font-family:monospace;
+  font-size: 70px;
+  font-weight: 600;
+  margin: 22px;
+  background: transparent;
+  border: none;
+  cursor: wait;
+}
