--- a/client/src/components/create/Create.module.css
+++ b/client/src/components/create/Create.module.css
@@ -1,8 +1,11 @@
-.mainDiv {
+.createDiv {
     width: 510px;
     height: 600px;
-    border: 2px solid rgb(255, 30, 0);
-    border-radius: 25px;
+    /* margin: 34px auto; */
+    background-color: rgba(0,0,0,0.5);
+    /* margin: 33px auto; */
+    /* border: 2px solid rgb(0, 158, 213); */
+    border-radius: 20px;
     padding: 30px 20px 50px 20px;
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
@@ -15,12 +18,12 @@
 
 @keyframes changeShadow {
     from {
-        box-shadow: 0px 2px 5px rgba(255, 30, 0);
+        box-shadow: 2px 5px 10px rgba(255, 30, 0);
         border: 2px solid rgb(255, 30, 0);
     }
     to {
-        box-shadow: 0px 2px 5px aqua;
-        border: 2px solid aqua;
+        box-shadow: 5px 15px 30px rgb(0, 158, 213);
+        border: 2px solid rgb(0, 158, 213);
     }
     }    
 
@@ -32,16 +35,17 @@
 
 .backButton, .createDriver {
     width: 100px;
-    height: 25px;
+    height: 30px;
     font-size: 0.8em;
     font-weight: 300;
-    color: aqua;
-    background-color: transparent;
-    border: 1px solid aqua;
-    border-radius: 40px;
+    color: rgb(255, 30, 0);
+    background-color: rgba(0,0,0,0.2);
+    /* background-color: transparent; */
+    border: 1px solid rgb(255, 30, 0);
+    border-radius: 7px;
     padding: 0;
     cursor: pointer;
-    transition: 0.5s linear;
+    transition: 0.3s linear;
 }
 
 .backButton {
@@ -58,8 +62,8 @@
 }
 
 .backButton:hover, .createDriver:hover {
-    transform: scale(1.2);
-    border-color: rgb(255, 30, 0);
+    /* transform: scale(1.2); */
+    border-color: rgb(0, 158, 213);
 }
 
 .createLabel {
@@ -73,29 +77,29 @@
     width: 400px;
     height: 22px;
     font-size: 14px;
-    color: aqua;
-    border-radius: 40px;
+    color: rgb(0, 158, 213);
+    border-radius: 7px;
     text-align: center;
-    transition: 0.5s linear;
+    transition: 0.3s linear;
 }
 
 .createInput:hover {
-    border-color: aqua;
+    border-color: rgb(0, 158, 213);
 }
 
 .createSelect {
-    width: 300px;
+    width: 250px;
     height: 26px;
     font-size: 1em;
     cursor: pointer;
     margin: 0;
     color: rgba(255, 255, 255, 0.87);
-    transition: 0.5s linear;
+    transition: 0.3s linear;
 }
 
 .createSelect:hover {
-    color: aqua;
-    border-color: aqua;
+    color: rgb(0, 158, 213);
+    border-color: rgb(0, 158, 213);
 }
 
 .createTextarea {
@@ -104,13 +108,13 @@
     border-radius: 7px;
     padding: 5px;
     font-size: 16px;
-    color: aqua;
+    color: rgb(0, 158, 213);
     resize: none;
-    transition: 0.5s linear;
+    transition: 0.3s linear;
 }
 
 .createTextarea:hover {
-    border-color: aqua;
+    border-color: rgb(0, 158, 213);
 }
 
 span {
@@ -123,7 +127,7 @@ span {
 
 .teamsSpan {
     all: unset;
-    color: aqua;
+    color: rgb(0, 158, 213);
     transition: 0.25s linear;
 }
 
