--- a/client/src/components/navbar/NavigationBar.module.css
+++ b/client/src/components/navbar/NavigationBar.module.css
@@ -3,20 +3,25 @@
     position: absolute;
     top: 0px;
     left: 15px;
-    right: 20px;
-    background-color: rgba(0, 0, 0, 0.4);
-    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-}
-
-.f1Logo {
+    right: 25px;
+    /* background-color: rgba(0, 0, 0, 0.4); */
+    /* background-image: url('../../assets/red_bull_racing_f1_hd-HD.jpg'); */
+    background-image: url('../../assets/2932.jpg');
+    background-position: bottom;
+    background-size: cover;
+    /* background-color: rgb(0, 42, 84); */
+    box-shadow: 15px 15px 10px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 15px 15px 10px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 15px 15px 10px 0px rgba(0,0,0,0.75);
+  }
+  
+  .f1Logo {
     position: absolute;
     top: 36%;
     left: 50px;
     width: 140px;
     height: auto;
-    transition: 0.5s linear;
+    transition: 0.3s linear;
 }
 
 .f1Logo:hover {
@@ -37,42 +42,92 @@
 
 .createButton, .reloadButton {
     width: 150px;
-    height: 25px;
+    height: 27px;
     font-size: 0.8em;
     font-weight: 300;
-    color: aqua;
-    background-color: transparent;
-    border: 1px solid aqua;
-    border-radius: 40px;
+    /* color: aqua; */
+    color: rgb(255, 30, 0);
+    background-color: rgba(0,0,0,0.4);
+    /* background-color: transparent; */
+    /* border: 1px solid aqua; */
+    border: 1px solid rgb(255, 30, 0);
+    border-radius: 7px;
     padding: 0 16px;
     cursor: pointer;
-    transition: 0.5s linear;
-  }
+    transition: 0.3s linear;
+}
   
-  .createButton:hover, .reloadButton:hover {
-      transform: scale(1.2);
-      border-color: rgb(255, 30, 0);
-  }
+.createButton:hover, .reloadButton:hover {
+      /* transform: scale(1.2); */
+      /* border-color: rgb(255, 30, 0); */
+      /* border-color: rgb(250, 240, 5); */
+      border-color: rgb(0, 158, 213);
+      /* box-shadow: 1px 1px 2px 0px rgba(0,0,0,0.75); */
+}
 
-  label {
-    font-size: 14px;
-    margin: 20px 0 0 10px;
-  }
 
-  select {
-    margin: 20px 30px 0 0;
-    width: 150px;
-    height: 22px;
-    font-size: 14px;
-    cursor: pointer;
-    border-radius: 40px;
-    text-align: center;
-    transition: 0.5s linear;
-    color: rgb(255, 30, 0);
-    
-  }
+label {
+  font-size: 14px;
+  margin: 20px 0 0 10px;
+}
 
-  select:hover {
-    color: aqua;
-    border-color: aqua;
-  }
+select {
+  margin: 20px 30px 0 0;
+  width: 150px;
+  height: 22px;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 7px;
+  text-align: center;
+  transition: 0.3s linear;
+  color: rgb(255, 30, 0);
+  /* color: rgb(0, 158, 213); */
+}
+
+option:disabled {
+  display: none;
+}
+
+.selectTeams {
+  width: 207px;
+}
+
+select:hover {
+  color: rgb(0, 158, 213);
+  /* color: rgb(250, 240, 5); */
+  border-color: rgb(0, 158, 213);
+  /* border-color: rgb(250, 240, 5); */
+}
+
+.GFButtonOn {
+  width: 30px;
+  height: 20px;
+  /* color: rgb(250, 240, 5); */
+  color: rgb(0, 158, 213);
+  cursor: pointer;
+  background-color: rgba(0,0,0,0.2);
+  /* border: 1px solid rgb(250, 240, 5); */
+  padding: 1px 0 2px 1px;
+  border-radius: 5px;
+  transition: 0.2s linear;
+}
+
+.GFButtonOff {
+  width: 30px;
+  height: 20px;
+  color: rgb(255, 30, 0);
+  cursor: pointer;
+  background-color: rgba(0,0,0,0.2);
+  padding: 1px 0 2px 1px;
+  border-radius: 5px;
+  transition: 0.2s linear;
+}
+
+.GFButtonOn:hover {
+  border-color: rgb(0, 158, 213);
+}
+
+.GFButtonOff:hover {
+  /* transform: scale(1.1); */
+  border-color: rgb(255, 30, 0);
+}
