--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,9 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* background-color: #242424; */
+  background-size: cover;
+  background-image: url("../src/assets/background2.jpg");
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
